--- a/index.html
+++ b/index.html
@@ -2,96 +2,83 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>ORBITRON v8.9 - SUPERNOVA</title>
+    <title>ORBITRON v9.1</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         :root {
             --n: #00f2ff; --p: #ff00ff; --bg: #01050a;
-            --glass: rgba(0, 242, 255, 0.04);
+            --glass: rgba(0, 242, 255, 0.06);
             --border: rgba(0, 242, 255, 0.2);
         }
 
         * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { 
-            background: var(--bg); color: var(--n); 
-            font-family: 'Share Tech Mono', monospace; 
-            height: 100vh; overflow: hidden; 
-        }
+        body { background: var(--bg); color: var(--n); font-family: 'Share Tech Mono', monospace; height: 100vh; overflow: hidden; }
 
         #starfield { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; }
 
-        .viewport {
+        /* --- LAYOUT --- */
+        .os-container {
             position: relative; z-index: 10;
-            display: grid;
-            grid-template-columns: 320px 1fr;
-            grid-template-rows: 60px 1fr;
-            height: 100vh; gap: 20px; padding: 20px;
+            display: flex; flex-direction: column;
+            height: 100vh; padding: 20px;
+        }
+
+        header {
+            display: flex; justify-content: space-between; align-items: center;
+            padding-bottom: 15px; border-bottom: 1px solid var(--border);
+            margin-bottom: 20px; font-family: 'Orbitron';
+        }
+
+        .main-area {
+            display: flex; flex: 1; gap: 40px; overflow: hidden;
         }
 
         .panel {
-            background: var(--glass);
-            backdrop-filter: blur(12px);
-            border: 1px solid var(--border);
-            display: flex; flex-direction: column;
-            overflow: hidden;
-            box-shadow: 0 0 30px rgba(0,0,0,0.5);
+            background: var(--glass); backdrop-filter: blur(10px);
+            border: 1px solid var(--border); display: flex; flex-direction: column;
+            box-shadow: 0 0 40px rgba(0,0,0,0.8);
         }
 
-        /* HEADER */
-        .header { grid-column: 1 / 3; display: flex; align-items: center; justify-content: space-between; padding: 0 20px; background: none; border: none; border-bottom: 1px solid var(--border); }
+        /* --- TODO (LEFT) --- */
+        .todo-panel { width: 300px; flex-shrink: 0; }
+        #todo-list { flex: 1; overflow-y: auto; padding: 10px; }
+        .task { 
+            padding: 12px; border-bottom: 1px solid rgba(0,242,255,0.1); 
+            cursor: pointer; transition: 0.2s; font-size: 13px;
+        }
+        .task:hover { 
+            color: var(--p); background: rgba(255,0,255,0.1);
+            text-decoration: line-through; border-bottom: 1px solid var(--p);
+            box-shadow: inset 0 0 10px rgba(255,0,255,0.2);
+        }
 
-        /* ЧАТ */
-        .chat-panel { grid-column: 2; display: flex; flex-direction: column; }
+        /* --- CHAT (CENTERED) --- */
+        .chat-wrapper {
+            flex: 1; display: flex; justify-content: center; /* ЦЕНТРИРОВАНИЕ */
+        }
+        .chat-panel {
+            width: 100%; max-width: 550px; /* УЗКИЙ ЧАТ */
+            height: 100%;
+        }
         #chat-stream {
             flex: 1; overflow-y: auto; padding: 20px;
-            display: flex; flex-direction: column; gap: 12px;
+            display: flex; flex-direction: column; gap: 15px;
             scrollbar-width: none;
         }
-        .msg { animation: fadeIn 0.3s ease; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } }
-        .msg-nick { font-size: 9px; color: var(--p); font-family: 'Orbitron'; margin-bottom: 3px; letter-spacing: 1px; }
-        .msg-text { background: rgba(0,242,255,0.05); padding: 10px 15px; border-radius: 0 10px 10px 10px; border: 1px solid rgba(0,242,255,0.1); color: #e0faff; }
+        .msg-text { background: rgba(0,242,255,0.05); padding: 10px 15px; border-radius: 4px; border: 1px solid rgba(0,242,255,0.1); }
+        .msg-nick { font-size: 10px; color: var(--p); margin-bottom: 4px; font-family: 'Orbitron'; }
 
-        /* TODO С ЭФФЕКТАМИ */
-        .todo-panel { grid-column: 1; }
-        #todo-list { flex: 1; overflow-y: auto; padding: 15px; }
-        .task { 
-            padding: 10px; border-bottom: 1px solid rgba(0,242,255,0.1); 
-            cursor: pointer; transition: 0.3s; font-size: 12px;
-            display: flex; align-items: center;
-        }
-        .task:before { content: ">"; margin-right: 10px; color: var(--p); }
-        .task:hover { 
-            color: var(--p); 
-            background: rgba(255,0,255,0.1);
-            text-decoration: line-through;
-            padding-left: 20px;
-            border-bottom-color: var(--p);
-        }
-
-        /* INPUTS */
-        .input-bar { display: flex; gap: 10px; padding: 15px; border-top: 1px solid var(--border); background: rgba(0,0,0,0.2); }
-        input { 
-            background: rgba(0,0,0,0.5); border: 1px solid var(--border); 
-            color: #fff; padding: 12px; font-family: inherit; flex: 1; outline: none; 
-        }
-        input:focus { border-color: var(--n); box-shadow: 0 0 10px var(--glass); }
-        button { 
-            background: transparent; border: 1px solid var(--n); color: var(--n); 
-            padding: 10px 20px; cursor: pointer; font-family: 'Orbitron'; font-size: 10px; transition: 0.3s;
-        }
+        /* --- UI ELEMENTS --- */
+        .input-box { display: flex; gap: 10px; padding: 15px; background: rgba(0,0,0,0.4); border-top: 1px solid var(--border); }
+        input { background: rgba(0,0,0,0.6); border: 1px solid var(--border); color: #fff; padding: 12px; font-family: inherit; flex: 1; outline: none; }
+        button { background: transparent; border: 1px solid var(--n); color: var(--n); padding: 10px 20px; cursor: pointer; font-family: 'Orbitron'; font-size: 11px; }
         button:hover { background: var(--n); color: #000; box-shadow: 0 0 20px var(--n); }
 
+        /* --- AUTH --- */
         #auth-gate { position: fixed; inset: 0; z-index: 100; background: var(--bg); display: flex; align-items: center; justify-content: center; }
+        .auth-form { width: 380px; padding: 50px; border: 1px solid var(--n); text-align: center; background: rgba(0,242,255,0.02); }
         .hidden { display: none !important; }
-
-        /* CRT Filter */
-        .viewport::after {
-            content: ""; position: fixed; inset: 0; pointer-events: none;
-            background: linear-gradient(rgba(18,16,16,0) 50%, rgba(0,0,0,0.1) 50%);
-            background-size: 100% 4px; z-index: 1000; opacity: 0.1;
-        }
     </style>
 </head>
 <body>
@@ -99,36 +86,41 @@
 <canvas id="starfield"></canvas>
 
 <div id="auth-gate">
-    <div style="width: 350px; text-align: center; border: 1px solid var(--n); padding: 50px; backdrop-filter: blur(10px);">
-        <h1 style="font-family:'Orbitron'; margin-bottom:30px; letter-spacing:5px;">OMNI_v8.9</h1>
-        <input type="email" id="email" placeholder="PILOT_ID" style="width:100%; margin-bottom:10px;">
-        <input type="password" id="pass" placeholder="PASSWORD" style="width:100%; margin-bottom:25px;">
-        <button onclick="Core.Auth('in')" style="width:100%;">INITIALIZE</button>
+    <div class="auth-form">
+        <h1 style="font-family:'Orbitron'; margin-bottom:30px; letter-spacing:4px;">TERMINAL_ACCESS</h1>
+        <input type="email" id="email" placeholder="PILOT_EMAIL" style="width:100%; margin-bottom:12px;">
+        <input type="password" id="pass" placeholder="SECURITY_KEY" style="width:100%; margin-bottom:20px;">
+        <button onclick="Core.Auth('in')" style="width:100%; margin-bottom:15px;">LOGIN</button>
+        <button onclick="Core.Auth('up')" style="border:none; color:var(--p); font-size:9px;">> NEW PILOT REGISTRATION</button>
     </div>
 </div>
 
-<div class="viewport">
-    <header class="header">
-        <div style="font-family:'Orbitron'; font-weight:700; letter-spacing:3px;">ORBITRON_SYSTEM</div>
+<div class="os-container">
+    <header>
+        <div>ORBITRON_OS // v9.1</div>
         <div id="clock">00:00:00</div>
     </header>
 
-    <aside class="panel todo-panel">
-        <div style="padding:15px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border); letter-spacing:2px;">MISSION_LOGS</div>
-        <div class="input-bar">
-            <input type="text" id="todo-in" placeholder="NEW TASK...">
-        </div>
-        <div id="todo-list"></div>
-    </aside>
+    <div class="main-area">
+        <aside class="panel todo-panel">
+            <div style="padding:15px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border)">MISSION_OBJECTIVES</div>
+            <div class="input-box">
+                <input type="text" id="todo-in" placeholder="ADD TASK...">
+            </div>
+            <div id="todo-list"></div>
+        </aside>
 
-    <main class="panel chat-panel">
-        <div style="padding:15px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border); letter-spacing:2px;">SECURE_COMMS</div>
-        <div id="chat-stream"></div>
-        <div class="input-bar">
-            <input type="text" id="chat-in" placeholder="ENTER TELEMETRY DATA...">
-            <button onclick="Core.Chat.send()">SEND</button>
+        <div class="chat-wrapper">
+            <main class="panel chat-panel">
+                <div style="padding:15px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border)">COMMS_CHANNEL_SECURE</div>
+                <div id="chat-stream"></div>
+                <div class="input-box">
+                    <input type="text" id="chat-in" placeholder="TRANSMIT MESSAGE...">
+                    <button onclick="Core.Chat.send()">SEND</button>
+                </div>
+            </main>
         </div>
-    </main>
+    </div>
 </div>
 
 <script>
@@ -146,6 +138,7 @@ const Core = {
 
     Auth: async (t) => {
         const e = document.getElementById('email').value, p = document.getElementById('pass').value;
+        if(!e || !p) return alert("Enter credentials");
         const { error } = await (t === 'in' ? Core.sb.auth.signInWithPassword({email:e, password:p}) : Core.sb.auth.signUp({email:e, password:p}));
         if(error) alert(error.message);
     },
@@ -168,7 +161,6 @@ const Core = {
         render(m) {
             const s = document.getElementById('chat-stream');
             const d = document.createElement('div');
-            d.className = 'msg';
             d.innerHTML = `<div class="msg-nick">${(m.nickname||'PILOT').toUpperCase()}</div><div class="msg-text">${m.message}</div>`;
             s.appendChild(d);
             s.scrollTop = s.scrollHeight;
@@ -176,28 +168,23 @@ const Core = {
         async send() {
             const i = document.getElementById('chat-in');
             if(!i.value || !Core.user) return;
-            const n = Core.user.email.split('@')[0], v = i.value; 
-            i.value = '';
-            this.render({nickname: n, message: v, created_at: new Date()});
+            const n = Core.user.email.split('@')[0], v = i.value; i.value = '';
+            this.render({nickname: n, message: v});
             await Core.sb.from('comments').insert([{message: v, nickname: n}]);
         }
     },
 
     UI() {
-        // Todo Enter
-        const ti = document.getElementById('todo-in');
-        ti.onkeypress = (e) => {
-            if(e.key === 'Enter' && ti.value) {
+        document.getElementById('todo-in').onkeypress = (e) => {
+            if(e.key === 'Enter' && e.target.value) {
                 const d = document.createElement('div');
-                d.className = 'task'; d.innerText = ti.value.toUpperCase();
+                d.className = 'task'; d.innerText = '> ' + e.target.value.toUpperCase();
                 d.onclick = () => d.remove();
                 document.getElementById('todo-list').prepend(d);
-                ti.value = '';
+                e.target.value = '';
             }
         };
-        // Chat Enter (Fixed!)
-        const ci = document.getElementById('chat-in');
-        ci.onkeypress = (e) => {
+        document.getElementById('chat-in').onkeypress = (e) => {
             if(e.key === 'Enter') Core.Chat.send();
         };
     },
@@ -208,12 +195,8 @@ const Core = {
             this.ctx = this.cvs.getContext('2d');
             this.res(); window.onresize = () => this.res();
             this.stars = Array.from({length: 200}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, s:Math.random()*2, v:Math.random()*0.5}));
-            // Asteroids Belt
-            this.rocks = Array.from({length: 12}, () => ({
-                x: Math.random()*this.cvs.width, y: Math.random()*this.cvs.height,
-                s: 5 + Math.random()*15, r: Math.random()*Math.PI*2, vs: 0.01 + Math.random()*0.02
-            }));
-            this.ufo = {x: -100, y: 400, p: []};
+            this.rocks = Array.from({length: 15}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, s:5+Math.random()*15, r:Math.random()*6, vs:Math.random()*0.02}));
+            this.ufo = {x: -100, y: 450, p: []};
         },
         res() { this.cvs.width = window.innerWidth; this.cvs.height = window.innerHeight; },
         draw() {
@@ -224,62 +207,39 @@ const Core = {
             ctx.fillStyle = '#fff';
             this.stars.forEach(s => {
                 s.x -= s.v; if(s.x < 0) s.x = cvs.width;
-                ctx.globalAlpha = Math.random();
-                ctx.beginPath(); ctx.arc(s.x, s.y, s.s/2, 0, 7); ctx.fill();
+                ctx.globalAlpha = Math.random(); ctx.beginPath(); ctx.arc(s.x, s.y, s.s/2, 0, 7); ctx.fill();
             });
-            ctx.globalAlpha = 1;
 
             // Asteroids
-            ctx.strokeStyle = 'rgba(0,242,255,0.3)';
+            ctx.strokeStyle = 'rgba(0,242,255,0.4)';
             this.rocks.forEach(r => {
-                r.x -= 0.3; r.r += r.vs;
-                if(r.x < -50) r.x = cvs.width + 50;
+                r.x -= 0.5; r.r += r.vs; if(r.x < -50) r.x = cvs.width+50;
                 ctx.save(); ctx.translate(r.x, r.y); ctx.rotate(r.r);
-                ctx.beginPath();
-                for(let i=0; i<6; i++) {
-                    let a = i * Math.PI/3;
-                    let rad = r.s + (Math.sin(i*2)*2);
-                    ctx.lineTo(Math.cos(a)*rad, Math.sin(a)*rad);
-                }
+                ctx.beginPath(); for(let i=0; i<6; i++) ctx.lineTo(Math.cos(i*Math.PI/3)*r.s, Math.sin(i*Math.PI/3)*r.s);
                 ctx.closePath(); ctx.stroke(); ctx.restore();
             });
 
-            // Enhanced Planet
-            const px = cvs.width * 0.85, py = cvs.height * 0.25;
-            // Glow
-            let glow = ctx.createRadialGradient(px, py, 100, px, py, 150);
-            glow.addColorStop(0, 'rgba(0,242,255,0.2)'); glow.addColorStop(1, 'transparent');
-            ctx.fillStyle = glow; ctx.beginPath(); ctx.arc(px, py, 150, 0, 7); ctx.fill();
-            // Planet body
-            let g = ctx.createRadialGradient(px-30, py-30, 10, px, py, 100);
-            g.addColorStop(0, '#00f2ff'); g.addColorStop(0.5, '#004466'); g.addColorStop(1, '#01050a');
-            ctx.fillStyle = g; ctx.beginPath(); ctx.arc(px, py, 100, 0, 7); ctx.fill();
-            // Rings
-            ctx.strokeStyle = 'rgba(0,242,255,0.1)';
-            ctx.beginPath(); ctx.ellipse(px, py, 180, 40, 0.4, 0, 7); ctx.stroke();
+            // Planet
+            const px = cvs.width * 0.85, py = cvs.height * 0.3;
+            let g = ctx.createRadialGradient(px-30, py-30, 5, px, py, 110);
+            g.addColorStop(0, '#00f2ff'); g.addColorStop(1, '#01050a');
+            ctx.fillStyle = g; ctx.beginPath(); ctx.arc(px, py, 110, 0, 7); ctx.fill();
+            ctx.strokeStyle = 'rgba(0,242,255,0.1)'; ctx.beginPath(); ctx.ellipse(px, py, 200, 50, 0.4, 0, 7); ctx.stroke();
 
             // UFO
-            let u = this.ufo;
-            u.x += 1.2; if(u.x > cvs.width + 100) u.x = -100;
-            let uy = u.y + Math.sin(Date.now()/600)*40;
-            if(Date.now() % 5 === 0) u.p.push({x: u.x - 40, y: uy, a: 1});
-            u.p.forEach((p, idx) => {
-                p.x -= 1; p.a -= 0.01;
-                ctx.fillStyle = `rgba(0, 242, 255, ${p.a})`;
-                ctx.beginPath(); ctx.arc(p.x, p.y, 2, 0, 7); ctx.fill();
-                if(p.a <= 0) u.p.splice(idx, 1);
+            let u = this.ufo; u.x += 1.5; if(u.x > cvs.width+100) u.x = -100;
+            let uy = u.y + Math.sin(Date.now()/500)*40;
+            if(Date.now() % 5 === 0) u.p.push({x: u.x-40, y: uy, a: 1});
+            u.p.forEach((p, i) => {
+                p.x -= 1; p.a -= 0.02; ctx.fillStyle = `rgba(0,242,255,${p.a})`;
+                ctx.beginPath(); ctx.arc(p.x, p.y, 2, 0, 7); ctx.fill(); if(p.a<=0) u.p.splice(i, 1);
             });
-            ctx.fillStyle = '#111'; ctx.beginPath(); ctx.ellipse(u.x, uy, 50, 12, 0, 0, 7); ctx.fill();
+            ctx.fillStyle = '#111'; ctx.beginPath(); ctx.ellipse(u.x, uy, 50, 14, 0, 0, 7); ctx.fill();
             ctx.strokeStyle = '#0ff'; ctx.lineWidth = 2; ctx.stroke();
         }
     },
-
-    loop() {
-        Core.Canvas.draw();
-        requestAnimationFrame(() => Core.loop());
-    }
+    loop() { Core.Canvas.draw(); requestAnimationFrame(() => Core.loop()); }
 };
-
 window.onload = () => Core.init();
 </script>
 </body>
